--- a/src/Components/Home/AboutSection/AboutSection.module.scss
+++ b/src/Components/Home/AboutSection/AboutSection.module.scss
@@ -3,7 +3,6 @@
 .aboutSection {
   background-color: #fcfcfc;
   padding: 12rem 0;
-  border: solid red;
 }
 
 .wrapper {
